syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service FilesControllerProto {
  rpc RequestFileLength(RequestFileLengthRequest) returns (RequestFileLengthResponse) {
    option (google.api.http) = {
      get: "/v1/Files/RequestFileLength"
    };
  }
  
  rpc CompareFileChunks(stream CompareFileChunksRequest) returns (stream CompareFileChunksResponse) {
    option (google.api.http) = {
      get: "/v1/Files/CompareFileChunks"
    };
  }

  rpc RequestFile(RequestFileRequest) returns (stream RequestFileResponse) {
    option (google.api.http) = {
      get: "/v1/Files/RequestFile"
    };
  }
}

message CompareFileChunksResponse {
  oneof response {
    ChunkStatus status = 3;
    bytes content = 2;
  }
}

message CompareFileChunksRequest {
  oneof request {
    string fileName = 1;
    bytes hash = 2;
  }
}

message ChunkStatus {
  oneof status {
    bool override = 1;
    bool eof = 2;
  }
}

message RequestFileRequest {
  string fileName = 1;
}

message RequestFileResponse {
  bytes content = 1;
}

message RequestFileLengthRequest {
  string fileName = 1;
  int64 length = 2;
}

message RequestFileLengthResponse {
  int64 length = 1;
}