syntax = "proto3";

import "google/api/annotations.proto";

service RenderJobControllerProto {
  rpc StartTestRender(StartRenderTestRequest) returns (StartRenderTestResponse) {
    option (google.api.http) = {
      get: "/v1/RenderJob/StartRenderTest"
    };
  }
}

message StartRenderTestRequest {
  string name = 1;
}

message StartRenderTestResponse {
  bool success = 1;
}